2018-04-27  Carl Hetherington  <cth@carlh.net>

	* Fix obscured subtitles in some cases.

2018-04-25  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Updated de_DE translation from Carsten Kurz.

2018-04-22  Carl Hetherington  <cth@carlh.net>

	* Add missing MOS makrer in ISDCF names if there is no sound.

2018-04-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-04-19  Carl Hetherington  <cth@carlh.net>

	* Fix crash on making a DCP after trimming the end of some text-based subtitles (#1275).

2018-04-13  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect preview crop with DCP sources when the preview is smaller than half
	of the DCP's resolution (#1274).

	* Update encoding server list when one goes away (#1176).

	* Add servers with bad server-link versions in the list (#982).

2018-04-12  Carl Hetherington  <cth@carlh.net>

	* Prevent error when starting export without specifying a filename (#1260).

2018-04-11  Carl Hetherington  <cth@carlh.net>

	* Fix 3D DCP handling in the player.

2018-04-10  Carl Hetherington  <cth@carlh.net>

	* Fix disappearing subtitles when they are added from text files
	alongside video content which also contain subtitles (#1271).

2018-04-06  Carl Hetherington  <cth@carlh.net>

	* Fix missing start icon for the player in Linux.

2018-04-05  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from 刘汉源.

	* Fix crash on startup if there are no audio devices (#1265).

	* Fix non-working arrow keys / space in text fields (#1263).

	* Fix assertion failures with 3D content in some cases.

2018-03-28  Carl Hetherington  <cth@carlh.net>

	* Disable audio mapping control when analysing audio (#1250).

2018-03-27  Carl Hetherington  <cth@carlh.net>

	* Use a label rather than a tooltip to tell users why they can't
	refer to DCPs.

2018-03-26  Carl Hetherington  <cth@carlh.net>
